Increase size of cache. Some code cleaning as recommended by lint.